--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html,
+body {
+  width: 300px;
+  height: 200px;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
