--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
-html,
-body {
+html, body {
   width: 300px;
-  height: 200px;
-  padding: 0;
-}
-
-body {
+  height: 400px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
