--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-html, body {
-  width: 300px;
+html,
+body {
+  width: 400px;
   height: 400px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
